[package]
name = "thread-lanes"
version = "0.1.0"
edition = "2021"
description = "Cross-platform thread lane management: configure, spawn, throttle"
license = "MIT OR Apache-2.0"
keywords = ["threads", "cgroup", "scheduling", "priority", "throttle"]
categories = ["os", "concurrency"]

[dependencies]
libc = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
